# SnakeOS-backend

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
app/: connections.py  main.py  settings.py
app/auth/: router.py  schemas.py  utils.py
app/docker/: models.py  routes.py
app/docker/clients/: __init__.py  docker.py
app/models/: __init__.py  base.py  user.py
app/system/: router.py  schemas.py
app/system/utils/: __init__.py  system_monitor.py
