[project]
name = "snakeos-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "distro>=1.9.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psutil>=7.0.0",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.10",
    "tortoise-orm>=0.25.0",
]
